sdks/cpp/include/vouch_core.h

#ifndef VOUCH_CORE_H
#define VOUCH_CORE_H

/* Generated by cbindgen from the Vouch Protocol core (core/uniffi/src/c_api.rs). Do not edit by hand. */

#include <stdarg.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>

#ifdef __cplusplus
extern "C" {
#endif // __cplusplus

/**
 * Free a string returned by this library.
 */
void vouch_string_free(char *s);

/**
 * Library version (caller frees).
 */
char *vouch_version(void);

/**
 * RFC 8785 canonicalization of a JSON string. NULL on error.
 */
char *vouch_canonicalize(const char *json, char **err_out);

/**
 * Generate an Ed25519 key pair. Returns JSON {seed_b64, public_b64, multikey, did_key}.
 */
char *vouch_generate_ed25519(char **err_out);

/**
 * Sign a credential (eddsa-jcs-2022). seed_b64 is the 32-byte Ed25519 seed.
 */
char *vouch_sign(const char *credential_json,
                            const char *seed_b64,
                            const char *verification_method,
                            const char *created,
                            char **err_out);

/**
 * Build a detached eddsa-jcs-2022 proof object (JSON).
 */
char *vouch_build_proof(const char *credential_json,
                        const char *seed_b64,
                        const char *verification_method,
                        const char *created,
                        char **err_out);

/**
 * Verify an eddsa-jcs-2022 proof. Returns "true"/"false".
 */
char *vouch_verify_proof(const char *credential_json, const char *public_b64, char **err_out);

/**
 * Verify a credential's proof and validity window. Returns JSON
 * {proofValid, timeValid, valid}.
 */
char *vouch_verify(const char *credential_json,
                              const char *public_b64,
                              const char *now_iso,
                              int64_t clock_skew_seconds,
                              char **err_out);

/**
 * Verify a dual proof (Ed25519 + ML-DSA-44). Returns "true"/"false".
 */
char *vouch_verify_dual(const char *credential_json,
                        const char *ed25519_public_b64,
                        const char *mldsa_public_b64,
                        char **err_out);

/**
 * Verify a v1.6.x composite hybrid proof. Returns "true"/"false".
 */
char *vouch_verify_composite(const char *credential_json,
                             const char *ed25519_public_b64,
                             const char *mldsa_public_b64,
                             char **err_out);

/**
 * Verify a credential's revocation status against a BitstringStatusList
 * credential. Returns "true" (set/revoked) or "false".
 */
char *vouch_verify_status(const char *credential_status_json,
                          const char *status_list_credential_json,
                          char **err_out);

/**
 * Build a delegation link. The valid_from / valid_until / parent_proof_value
 * arguments are optional: pass NULL to omit them. Returns the link as JSON.
 */
char *vouch_build_delegation_link(const char *issuer,
                                  const char *subject,
                                  const char *intent_json,
                                  const char *valid_from,
                                  const char *valid_until,
                                  const char *parent_proof_value,
                                  char **err_out);

/**
 * Validate the time-bound rule over a delegation chain (a JSON array of links).
 * Returns "true"/"false".
 */
char *vouch_verify_chain_time_bound(const char *chain_json,
                                    const char *now_iso,
                                    int64_t clock_skew_seconds,
                                    char **err_out);

/**
 * Mint a fresh threshold-native Ed25519 identity: max_signers key shares, any
 * min_signers of which can sign together. Returns JSON
 * {shares: [{identifier, key_package}, ...], group_public_key: {verifying_key, public_key_package}}.
 */
char *vouch_threshold_generate_key(uint16_t min_signers,
                                   uint16_t max_signers,
                                   char **err_out);

/**
 * Round 1 for one signer (one entry from generate_key's shares array).
 * Returns JSON {nonces, commitments}. `nonces` is SECRET: keep it on this
 * signer's device only, use it for exactly one vouch_threshold_sign_share
 * call, then discard it.
 */
char *vouch_threshold_commit(const char *key_share_json, char **err_out);

/**
 * Round 2 for one signer. message is the raw bytes to sign (base64).
 * commitments_json maps every participating signer's base64 identifier to
 * its base64 commitment, including this signer's own. Returns the
 * base64-encoded signature share.
 */
char *vouch_threshold_sign_share(const char *message_b64,
                                 const char *key_share_json,
                                 const char *nonces_b64,
                                 const char *commitments_json,
                                 char **err_out);

/**
 * Combine signature shares into the final signature. commitments_json and
 * shares_json map each signer's base64 identifier to its base64 commitment /
 * signature share. group_public_key_json is the group_public_key object from
 * vouch_threshold_generate_key. Returns the base64-encoded 64-byte Ed25519
 * signature.
 */
char *vouch_threshold_aggregate(const char *message_b64,
                                const char *commitments_json,
                                const char *shares_json,
                                const char *group_public_key_json,
                                char **err_out);

/**
 * Mint a RobotIdentityCredential.  carries make/model/serial and
 * the hardware root; returns the signed credential JSON.
 */
char *vouch_robotics_mint_identity(const char *robot_seed_b64,
                                   const char *params_json,
                                   char **err_out);

/**
 * Verify a RobotIdentityCredential. Returns the credentialSubject JSON.
 */
char *vouch_robotics_verify_identity(const char *credential_json,
                                     const char *public_b64,
                                     char **err_out);

/**
 * Check a physical action against a physical capability scope. Returns JSON
 * {ok, reasons}.
 */
char *vouch_robotics_check_action(const char *scope_json, const char *action_json, char **err_out);

/**
 * Verify a scannable robot passport URI. Returns the passport summary JSON.
 */
char *vouch_robotics_verify_passport(const char *uri,
                                     const char *public_b64,
                                     const char *now_iso,
                                     char **err_out);

/**
 * Check a set of robot credentials against a named regulatory profile.
 *  is a JSON array; returns the deterministic report JSON.
 */
char *vouch_robotics_check_conformance(const char *credentials_json,
                                       const char *profile_id,
                                       char **err_out);

/**
 * Sign a point-in-time conformance attestation over a report. 
 * carries issuerDid/robotDid/report; returns the signed credential JSON.
 */
char *vouch_robotics_build_conformance_attestation(const char *signer_seed_b64,
                                                   const char *params_json,
                                                   char **err_out);

/**
 * Verify a conformance attestation and its bound report digest. Returns the
 * credentialSubject JSON.
 */
char *vouch_robotics_verify_conformance_attestation(const char *credential_json,
                                                    const char *public_b64,
                                                    char **err_out);

/**
 * Attach a hybrid post-quantum proof (Ed25519 + ML-DSA-44) to a robot
 * credential. Returns the re-signed credential JSON.
 */
char *vouch_robotics_sign_pq(const char *credential_json,
                             const char *ed25519_seed_b64,
                             const char *mldsa_secret_b64,
                             const char *mldsa_public_b64,
                             const char *created_iso,
                             char **err_out);

/**
 * Verify a robot credential whether it carries a classical or a hybrid proof,
 * auto-detected from the proof. Pass the ML-DSA-44 public key (base64) for a
 * hybrid credential, or NULL for a classical one. Returns "true"/"false".
 */
char *vouch_robotics_verify_robot_credential(const char *credential_json,
                                             const char *ed25519_public_b64,
                                             const char *mldsa44_public_b64,
                                             char **err_out);

#ifdef __cplusplus
}  // extern "C"
#endif  // __cplusplus

#endif  /* VOUCH_CORE_H */